name:           stroots
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/stroots#readme>
homepage:       https://github.com/appositum/stroots#readme
bug-reports:    https://github.com/appositum/stroots/issues
author:         appositum
maintainer:     appositum@protonmail.com
copyright:      2018 appositum
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/stroots

library
  exposed-modules:
      Stroots.List
      Stroots.Nat
      Stroots.Vector
  other-modules:
      Paths_stroots
  default-extensions:
      InstanceSigs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable stroots-exe
  main-is: Main.hs
  other-modules:
      Paths_stroots
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , stroots
  default-language: Haskell2010

test-suite stroots-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_stroots
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , stroots
  default-language: Haskell2010
